Trying to fix the display problems (menu and table alignment) of the new meterprofile page...

--- a/yukon-client/yukon-web/WebContent/include/PurpleStyles.css
+++ b/yukon-client/yukon-web/WebContent/include/PurpleStyles.css
@@ -7,6 +7,7 @@
 	float: left;
 	margin-left: -7px;
 	margin-top: 7px;
+	z-index: 100;
 }
 
 .standardcentralwhitebody
@@ -48,4 +49,10 @@
 	font-style: bold italic;
 	color: #000000;
 	background-color: #CCCCCC
+}
+
+.forefront
+{
+	z-index: 10000;
+	position: absolute;
 }
